--- a/tp/tp-04-alignement/src/tp-04-alignement.html
+++ b/tp/tp-04-alignement/src/tp-04-alignement.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,21 +13,50 @@
 		width: 45px;
 		height: 45px;
 	}
+
 	.row {
 		height: 20vh;
 	}
+
 	/*UNCOMMENT ME FOR DEBUG*/
 	/*.col {*/
 	/*	border: 1px !important;*/
 	/*	border-color: #000 !important;*/
-    /*    border: solid !important;*/
+	/*    border: solid !important;*/
 	/*}*/
 </style>
 
 <body>
 
-<!--TODO : CODER ICI-->
+	<!--TODO : CODER ICI-->
+	<div class="container bg-warning">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+		<div class="row">
+			<div class="col d-flex align-items-end"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+			<div class="col d-flex align-items-center justify-content-center"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+			<div class="col d-flex  align-items-end justify-content-end"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+		</div>
+		<div class="row">
+			<div class="col d-flex align-items-center justify-content-end"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+			<div class="col d-flex align-items-center justify-content-center"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+			<div class="col d-flex align-items-center justify-content-start"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+		</div>
+		<div class="row">
+			<div class="col d-flex align-items-start"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+			<div class="col d-flex align-items-center justify-content-center"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+			<div class="col d-flex align-items-start justify-content-end"><img
+					src="https://www.clker.com/cliparts/6/l/f/V/f/H/green-led-off-md.png" alt=""></div>
+		</div>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
