--- a/tp/tp-05-navbar/src/page1.html
+++ b/tp/tp-05-navbar/src/page1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -32,13 +32,13 @@
                 <div class="collapse navbar-collapse" id="myNavBar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="tp05-bootstrap.html" class="nav-link active">Home page</a>
+                            <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a href="page1.html" class="nav-link">Page 1</a>
                         </li>
                         <li class="nav-item">
-                            <a href="page2.html" class="nav-link">Page 2</a>
+                            <a href="pageContact.html" class="nav-link">Nous contacter</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,7 +47,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navDrop">
                                 <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
-                                <li><a class="dropdown-item" href="page2.html">Page 2</a></li>
+                                <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -59,11 +59,77 @@
 
         <div>
             <div class="row text-center p-5">
-                <h1>page 1</h1>
+                <h1>Page 1</h1>
             </div>
             <div class="row">
                 <div class="col-sm-12 col-md-6 text-center">
-                    <img src="https://picsum.photos/640/480" alt="">
+                    <img src="https://picsum.photos/200/300" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 text-center">
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
+                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
+                        dignissimos voluptatibus fugiat consectetur?
+                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
+                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi praesentium
+                        eius aliquid excepturi ipsa!
+                        Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
+                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore repudiandae
+                        corporis, et modi libero quasi vero soluta consequuntur tenetur.
+                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores quis
+                        consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
+                        deleniti itaque atque odit. Error, amet.
+                        Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
+                        Dignissimos suscipit, perferendis, rem architecto saepe neque consequuntur nam ipsa eligendi
+                        placeat aut impedit magni consectetur nesciunt beatae?</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 text-center">
+                    <img src="https://picsum.photos/200/200" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 text-center">
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
+                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
+                        dignissimos voluptatibus fugiat consectetur?
+                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
+                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi praesentium
+                        eius aliquid excepturi ipsa!
+                        Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
+                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore repudiandae
+                        corporis, et modi libero quasi vero soluta consequuntur tenetur.
+                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores quis
+                        consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
+                        deleniti itaque atque odit. Error, amet.
+                        Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
+                        Dignissimos suscipit, perferendis, rem architecto saepe neque consequuntur nam ipsa eligendi
+                        placeat aut impedit magni consectetur nesciunt beatae?</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 text-center">
+                    <img src="https://picsum.photos/150/250" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 text-center">
+                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
+                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
+                        dignissimos voluptatibus fugiat consectetur?
+                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
+                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi praesentium
+                        eius aliquid excepturi ipsa!
+                        Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
+                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore repudiandae
+                        corporis, et modi libero quasi vero soluta consequuntur tenetur.
+                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores quis
+                        consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
+                        deleniti itaque atque odit. Error, amet.
+                        Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
+                        Dignissimos suscipit, perferendis, rem architecto saepe neque consequuntur nam ipsa eligendi
+                        placeat aut impedit magni consectetur nesciunt beatae?</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 text-center">
+                    <img src="https://picsum.photos/100/100" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 text-center">
                                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
