--- a/tp/tp-05-navbar/src/pageContact.html
+++ b/tp/tp-05-navbar/src/pageContact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nous contacter</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -33,13 +33,13 @@
                 <div class="collapse navbar-collapse" id="myNavBar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="tp05-bootstrap.html" class="nav-link active">Home page</a>
+                            <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a href="page1.html" class="nav-link">Page 1</a>
                         </li>
                         <li class="nav-item">
-                            <a href="page2.html" class="nav-link">Page 2</a>
+                            <a href="pageContact.html" class="nav-link">Nous contacter</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -48,7 +48,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navDrop">
                                 <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
-                                <li><a class="dropdown-item" href="page2.html">Page 2</a></li>
+                                <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -60,30 +60,29 @@
 
         <div>
             <div class="row text-center p-5">
-                <h1>Page 2</h1>
+                <h1>Nous contacter</h1>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6 text-center">
-                    <img src="https://picsum.photos/640/480" alt="">
+            <form>
+                <div class="mb-3">
+                    <label for="fname" class="form-label">Nom</label>
+                    <input type="text" name="fname" id="fname" aria-describedby="fnameHelp">
+                    <div id="fnameHelp" class="form-text">Votre prénom</div>
                 </div>
-                <div class="col-sm-12 col-md-6 text-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
-                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
-                        dignissimos voluptatibus fugiat consectetur?
-                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
-                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi praesentium
-                        eius aliquid excepturi ipsa!
-                        Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
-                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore repudiandae
-                        corporis, et modi libero quasi vero soluta consequuntur tenetur.
-                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores quis
-                        consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
-                        deleniti itaque atque odit. Error, amet.
-                        Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
-                        Dignissimos suscipit, perferendis, rem architecto saepe neque consequuntur nam ipsa eligendi
-                        placeat aut impedit magni consectetur nesciunt beatae?</p>
+
+                <div class="mb-3">
+                    <label for="lname" class="form-label">Nom</label>
+                    <input type="text" name="lname" id="fname" aria-describedby="lnameHelp">
+                    <div id="lnameHelp" class="form-text">Votre nom de famille</div>
                 </div>
-            </div>
+
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">Nous ne partagerons jamais votre adresse mail.</div>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Envoyer</button>
+              </form>
         </div>
 
     </div>
