--- a/tp/tp-05-navbar/src/tp05-bootstrap.html
+++ b/tp/tp-05-navbar/src/tp05-bootstrap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -33,13 +33,13 @@
                 <div class="collapse navbar-collapse" id="myNavBar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="tp05-bootstrap.html" class="nav-link active">Home page</a>
+                            <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a href="page1.html" class="nav-link">Page 1</a>
                         </li>
                         <li class="nav-item">
-                            <a href="page2.html" class="nav-link">Page 2</a>
+                            <a href="pageContact.html" class="nav-link">Nous contacter</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -48,7 +48,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navDrop">
                                 <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
-                                <li><a class="dropdown-item" href="page2.html">Page 2</a></li>
+                                <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
                             </ul>
                         </li>
                     </ul>
