--- a/tp/tp-05-navbar/src/page1.html
+++ b/tp/tp-05-navbar/src/page1.html
@@ -61,21 +61,29 @@
             <div class="row text-center p-5">
                 <h1>Page 1</h1>
             </div>
-            <div class="row">
+
+            <div class="row border-top border-5 p-5">
                 <div class="col-sm-12 col-md-6 text-center">
                     <img src="https://picsum.photos/200/300" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 text-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
-                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium
+                        nihil
+                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse
+                        ad
                         dignissimos voluptatibus fugiat consectetur?
-                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
-                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi praesentium
+                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam
+                        in
+                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi
+                        praesentium
                         eius aliquid excepturi ipsa!
                         Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
-                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore repudiandae
+                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore
+                        repudiandae
                         corporis, et modi libero quasi vero soluta consequuntur tenetur.
-                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores quis
+                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores
+                        quis
                         consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
                         deleniti itaque atque odit. Error, amet.
                         Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
@@ -83,12 +91,13 @@
                         placeat aut impedit magni consectetur nesciunt beatae?</p>
                 </div>
             </div>
-            <div class="row">
+
+            <div class="row border-top border-5 p-5">
                 <div class="col-sm-12 col-md-6 text-center">
                     <img src="https://picsum.photos/200/200" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 text-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
                         quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
                         dignissimos voluptatibus fugiat consectetur?
                         Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
@@ -105,12 +114,12 @@
                         placeat aut impedit magni consectetur nesciunt beatae?</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row border-top border-5 p-5">
                 <div class="col-sm-12 col-md-6 text-center">
                     <img src="https://picsum.photos/150/250" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 text-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
                         quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
                         dignissimos voluptatibus fugiat consectetur?
                         Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
@@ -127,12 +136,12 @@
                         placeat aut impedit magni consectetur nesciunt beatae?</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row border-top border-5 p-5">
                 <div class="col-sm-12 col-md-6 text-center">
                     <img src="https://picsum.photos/100/100" alt="">
                 </div>
                 <div class="col-sm-12 col-md-6 text-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
                         quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
                         dignissimos voluptatibus fugiat consectetur?
                         Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
