--- a/tp/tp-05-navbar/src/tp05-bootstrap.html
+++ b/tp/tp-05-navbar/src/tp05-bootstrap.html
@@ -63,20 +63,26 @@
                 <h1>Mon site web en bootstrap 5</h1>
             </div>
             <div class="row">
-                <div class="colo-sm-12 col-md-6 text-center">
-                    <img src="https://picsum.photos/640/480" alt="">
+                <div class="col-sm-12 col-md-12 text-center">
+                    <img src="https://picsum.photos/640/480" class="img-thumbnail" alt="">
                 </div>
-                <div class="col-sm-12 col-6 text-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium nihil
-                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse ad
+                <div class="col-sm-12 col-12 text-center">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium
+                        nihil
+                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse
+                        ad
                         dignissimos voluptatibus fugiat consectetur?
-                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam in
-                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi praesentium
+                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam
+                        in
+                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi
+                        praesentium
                         eius aliquid excepturi ipsa!
                         Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
-                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore repudiandae
+                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore
+                        repudiandae
                         corporis, et modi libero quasi vero soluta consequuntur tenetur.
-                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores quis
+                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores
+                        quis
                         consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
                         deleniti itaque atque odit. Error, amet.
                         Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
@@ -85,7 +91,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
