--- a/tp/tp-05-navbar/src/page1.html
+++ b/tp/tp-05-navbar/src/page1.html
@@ -13,49 +13,45 @@
 
 <body>
 
-    <div class="container-fluid bg-light">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-            <div class="container-fluid">
+        <!-- LOGO = BRAND -->
+        <a href="#" class="navbar-brand ps-5">
+            <img src="https://picsum.photos/50/50">
+        </a>
 
-                <!-- LOGO = BRAND -->
-                <a href="#" class="navbar-brand">
-                    <img src="https://picsum.photos/50/50">
-                </a>
+        <!-- COLLAPSE BTN : RESPONSIVE -->
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#myNavBar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <!-- COLLAPSE BTN : RESPONSIVE -->
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#myNavBar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <!-- MENU -->
-                <div class="collapse navbar-collapse" id="myNavBar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="page1.html" class="nav-link">Page 1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pageContact.html" class="nav-link">Nous contacter</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navDrop">
-                                <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
-                                <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
-                            </ul>
-                        </li>
+        <!-- MENU -->
+        <div class="collapse navbar-collapse" id="myNavBar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a href="page1.html" class="nav-link">Page 1</a>
+                </li>
+                <li class="nav-item">
+                    <a href="pageContact.html" class="nav-link">Nous contacter</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navDrop">
+                        <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
+                        <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
                     </ul>
-                </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-            </div>
-
-        </nav>
+    <div class="container-fluid bg-light">
 
         <div>
             <div class="row text-center p-5">
