--- a/tp/tp-05-navbar/src/tp05-bootstrap.html
+++ b/tp/tp-05-navbar/src/tp05-bootstrap.html
@@ -13,82 +13,75 @@
 
 <body>
 
-    <div class="container-fluid bg-light">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-            <div class="container-fluid">
+        <!-- LOGO = BRAND -->
+        <a href="#" class="navbar-brand ps-5">
+            <img src="https://picsum.photos/50/50">
+        </a>
 
-                <!-- LOGO = BRAND -->
-                <a href="#" class="navbar-brand">
-                    <img src="https://picsum.photos/50/50">
-                </a>
+        <!-- COLLAPSE BTN : RESPONSIVE -->
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#myNavBar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                <!-- COLLAPSE BTN : RESPONSIVE -->
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#myNavBar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <!-- MENU -->
-                <div class="collapse navbar-collapse" id="myNavBar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="page1.html" class="nav-link">Page 1</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="pageContact.html" class="nav-link">Nous contacter</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navDrop">
-                                <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
-                                <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
-                            </ul>
-                        </li>
+        <!-- MENU -->
+        <div class="collapse navbar-collapse" id="myNavBar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="tp05-bootstrap.html" class="nav-link active">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a href="page1.html" class="nav-link">Page 1</a>
+                </li>
+                <li class="nav-item">
+                    <a href="pageContact.html" class="nav-link">Nous contacter</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navDrop">
+                        <li><a class="dropdown-item" href="page1.html">Page 1</a></li>
+                        <li><a class="dropdown-item" href="pageContact.html">Nous contacter</a></li>
                     </ul>
-                </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
+    <div class="container-fluid bg-light">
+        <div class="row text-center p-5">
+            <h1>Mon site web en bootstrap 5</h1>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-12 text-center">
+                <img src="https://picsum.photos/640/480" class="img-thumbnail" alt="">
             </div>
-
-        </nav>
-
-        <div>
-            <div class="row text-center p-5">
-                <h1>Mon site web en bootstrap 5</h1>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-12 text-center">
-                    <img src="https://picsum.photos/640/480" class="img-thumbnail" alt="">
-                </div>
-                <div class="col-sm-12 col-12 text-center">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium
-                        nihil
-                        quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse
-                        ad
-                        dignissimos voluptatibus fugiat consectetur?
-                        Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam
-                        in
-                        deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi
-                        praesentium
-                        eius aliquid excepturi ipsa!
-                        Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
-                        temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore
-                        repudiandae
-                        corporis, et modi libero quasi vero soluta consequuntur tenetur.
-                        Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores
-                        quis
-                        consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
-                        deleniti itaque atque odit. Error, amet.
-                        Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
-                        Dignissimos suscipit, perferendis, rem architecto saepe neque consequuntur nam ipsa eligendi
-                        placeat aut impedit magni consectetur nesciunt beatae?</p>
-                </div>
+            <div class="col-sm-12 col-12 text-center">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis quae non ad praesentium
+                    nihil
+                    quis. Recusandae, laborum? Assumenda, laborum? Consequatur, qui? Odio reprehenderit, ut esse
+                    ad
+                    dignissimos voluptatibus fugiat consectetur?
+                    Ipsa nam placeat iste deserunt? Consectetur at est culpa fugit rerum! Ducimus culpa veniam
+                    in
+                    deleniti hic nisi! Voluptatibus repudiandae fuga neque corrupti voluptatem commodi
+                    praesentium
+                    eius aliquid excepturi ipsa!
+                    Accusantium possimus fugit expedita officiis inventore eveniet cum exercitationem. Vitae
+                    temporibus consectetur aperiam suscipit deserunt illo deleniti possimus fugit labore
+                    repudiandae
+                    corporis, et modi libero quasi vero soluta consequuntur tenetur.
+                    Nostrum explicabo facere accusantium similique iure enim dignissimos fugiat fuga maiores
+                    quis
+                    consequuntur, doloremque hic nemo error! Saepe nisi optio pariatur magnam maxime reiciendis
+                    deleniti itaque atque odit. Error, amet.
+                    Inventore debitis fuga quam est voluptas beatae maxime incidunt libero, eligendi cumque?
+                    Dignissimos suscipit, perferendis, rem architecto saepe neque consequuntur nam ipsa eligendi
+                    placeat aut impedit magni consectetur nesciunt beatae?</p>
             </div>
         </div>
     </div>
